# LinuxCLearn

./: -a  CMakeCache.txt  CMakeLists.txt  LinuxC  LinuxC.files  LinuxC.includes  Makefile  cmake_install.cmake
chapter4/: tee.c
chapter5/: dup.c  test.c
debug/: CMakeLists.txt  Makefile  cmake_install.cmake  debug.c  debug.h
